src/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "poppins", "sans-serif";
}

.navbar-fixed {
  @apply fixed top-0 left-0 w-full z-50 /* w-full fixed z-[999] bg-white/60  backdrop-blur-sm; */
  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
}

.hamburger-line {
  @apply w-[30px] h-[2px] my-2 block bg-dark;
}

.hamburger-active > span:nth-child(1) {
  @apply rotate-45;
}

.hamburger-active > span:nth-child(2) {
  @apply scale-0;
}

.hamburger-active > span:nth-child(3) {
  @apply -rotate-45;
}

